# recommender_microservice

./: Dockerfile  README.md  compose.test.yml  pyproject.toml  sonar-project.properties
app/: main.py  pub.py
app/api/: __init__.py  auth_deps.py  recommender.py
app/core/: config.py
app/tests/: conftest.py
app/tests/api/: recommender_test.py
