[tool.poetry]
name = "app"
version = "0.1.0"
description = "Microservice for Recommender operations to be included in the TrailBlazer project"
authors = ["AlexandreCotorobai <alexandrecotorobai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
requests = "^2.31.0"
elasticsearch = "^8.13.0"
python-multipart = "^0.0.9"
pika = "^1.3.2"
httpx = "^0.27.0"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.28.0"
tox = "^4.14.2"
pytest = "^8.1.1"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
